# empiar-cets

./: .env_template  README.md  pyproject.toml
definition_files/: empiar_12104.yaml
empiar_cets/: annotation_utils.py  cli.py  empiar_utils.py  metadata_models.py  metadata_utils.py  thumbnail.py  yaml_parsing.py
empiar_cets/cets/: alignment.py  annotations.py  movie_stack_collection.py  region.py  tilt_series.py  tomogram.py
